[PROPINQ-74]: Consultar inmuebles (#7)
Co-authored-by: Ezequiel Sosa <ezequielsosa423@gmail.com>
Co-authored-by: Ignacio Gonzalez <55899890+NachoG13@users.noreply.github.com>
Co-authored-by: Nacho <ignacio.rover@gmail.com>